--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>Airport Application</title>
 </head>
 <body>
   <div id="booking" class="section">
@@ -23,10 +23,10 @@
 		
 		<form id="my-form">
 		<div class="form-group">
-			<input class="form-control" id="origin" type="text" placeholder="Enter Origin">
+			<input class="form-control" id="origin" type="text" placeholder="Enter Origin" required>
 		</div>
 		<div class="form-group">
-			<input class="form-control" id="destination" type="text" placeholder="Enter Destination">
+			<input class="form-control" id="destination" type="text" placeholder="Enter Destination" required>
 		</div>
 		<div class="row">
 			<div class="col-md-4">
